tests/compile_fail/newtype_struct.stderr
error: Unsupported shape `one unnamed field`. Expected named fields.
 --> tests/compile_fail/newtype_struct.rs:5:10
  |
5 | #[derive(From)]
  |          ^^^^
  |
  = note: this error originates in the derive macro `From` (in Nightly builds, run with -Z macro-backtrace for more info)
